bugfix/CIR-319 - Fix overlapping content with selective figure top margin
Previously, all `figure` elements within the component had a negative top margin, which led to titles or other content overlapping images. This change restricts the negative top margin to only the `first-child` figure, resolving the visual overlap for subsequent images while retaining the desired alignment for the initial element.

--- a/app/assets/scss/components/miscellaneous/index.scss
+++ b/app/assets/scss/components/miscellaneous/index.scss
@@ -127,7 +127,11 @@
   padding: 1rem;
 
   > figure {
-    margin: -1rem -1rem 0;
+    margin: 0 -1rem 0;
+  }
+
+  > figure:first-child {
+    margin-top: -1rem;
   }
 
   img {
